--- a/index.html
+++ b/index.html
@@ -8,15 +8,62 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style/text.css">
-    <link rel="stylesheet" href="style/page.css">
+    <link rel="stylesheet" href="/style/text.css">
+    <link rel="stylesheet" href="/style/page.css">
   </head>
 
   <body>
     <h1 class="centered">
-      zCubed
+      zCubed (Liam)
     </h1>
+    <img src="/assets/zCubed_Purple_512.png" class="centered" width="256"/>
     <br/>
+
+    <h1 class="centered">
+      About me
+    </h1>
+
+    <div class="flex_grid">
+      <div class="flex_row">
+        <project_card class="about_me centered">
+          <h2>Who am I?</h2>
+          My username is "zCubed"
+          <br/>
+          My first name is "Liam"
+          <br/>
+          <br/>
+          I'm 18 years old
+          <br/>
+          I live on the West Coast of the USA
+          <br/>
+          I'm open to both work-from-home and in-office job opportunities
+          <br/>
+          <br/>
+          I use Windows, macOS, and Linux regularly for development
+        </project_card>
+      </div>
+    </div>
+
+    <div class="flex_grid">
+      <div class="flex_row">
+        <project_card class="about_me centered">
+          <h2>Experience?</h2>
+          <h3><a class="white" href="https://www.patreon.com/strayed/about">Torched Games</a> - Commission - March 2023</h3>
+          Commissioned by <a class="white" href="https://www.patreon.com/strayed/about">Torched Games</a> to create a
+          foliage system for their upcoming VR survival game "Strayed".
+          <br/>
+          <br/>
+          System was never finished, but the requesting party was happy with the work done up until that point
+          <br/>
+          <h3>
+            <a class="white" href="./galleries/grass_com.html">Gallery</a>
+            -
+            <a class="white" href="https://github.com/zCubed3/GPU-Grass/">Source Code</a>
+          </h3>
+        </project_card>
+      </div>
+    </div>
+
     <h1 class="centered">
       Major Projects
     </h1>
