Add grass commission

--- a/galleries/grass_com.html
+++ b/galleries/grass_com.html
@@ -1,15 +1,97 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>zCubed - Grass Commission</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>zCubed - Grass Commission</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/style/text.css">
-    <link rel="stylesheet" href="/style/page.css">
-</head>
-<body>
- TODO
-</body>
+        <link rel="stylesheet" href="/style/text.css">
+        <link rel="stylesheet" href="/style/page.css">
+    </head>
+    <body>
+        <h1 class="centered">Strayed VR - Grass Commission</h1>
+        <br/>
+        <h2 class="centered">Videos</h2>
+        <h3 class="centered">Disclaimer: Videos are in alphabetical order! They're not ordered chronologically!</h3>
+        <div class="flex_grid">
+            <div class="flex_row">
+                <project_card class="video_card">
+                    <h2 class="centered">Biome Blending</h2>
+                    <video class="rounded" width="640" controls autoplay>
+                        <source src="/assets/Grass_BiomeBlending.mp4" type="video/mp4">
+                        Sorry your browser doesn't support MPEG4 video playback!
+                    </video>
+                </project_card>
+            </div>
+        </div>
+        <div class="flex_grid">
+            <div class="flex_row">
+                <project_card class="video_card">
+                    <h2 class="centered">Biome Gradient</h2>
+                    <video class="rounded" width="640" controls autoplay>
+                        <source src="/assets/Grass_BiomeGradient.mp4" type="video/mp4">
+                        Sorry your browser doesn't support MPEG4 video playback!
+                    </video>
+                </project_card>
+            </div>
+        </div>
+        <div class="flex_grid">
+            <div class="flex_row">
+                <project_card class="video_card">
+                    <h2 class="centered">Biomes</h2>
+                    <video class="rounded" width="640" controls autoplay>
+                        <source src="/assets/Grass_Biomes.mp4" type="video/mp4">
+                        Sorry your browser doesn't support MPEG4 video playback!
+                    </video>
+                </project_card>
+            </div>
+        </div>
+        <div class="flex_grid">
+            <div class="flex_row">
+                <project_card class="video_card">
+                    <h2 class="centered">Displacement</h2>
+                    <video class="rounded" width="640" controls autoplay>
+                        <source src="/assets/Grass_Displacement.mp4" type="video/mp4">
+                        Sorry your browser doesn't support MPEG4 video playback!
+                    </video>
+                </project_card>
+            </div>
+        </div>
+        <div class="flex_grid">
+            <div class="flex_row">
+                <project_card class="video_card">
+                    <h2 class="centered">GPU Placement</h2>
+                    <video class="rounded" width="640" controls autoplay>
+                        <source src="/assets/Grass_GPUPlacement.mp4" type="video/mp4">
+                        Sorry your browser doesn't support MPEG4 video playback!
+                    </video>
+                </project_card>
+            </div>
+        </div>
+        <div class="flex_grid">
+            <div class="flex_row">
+                <project_card class="video_card">
+                    <h2 class="centered">Terrain Color 1</h2>
+                    <video class="rounded" width="640" controls autoplay>
+                        <source src="/assets/Grass_TerrainColor1.mp4" type="video/mp4">
+                        Sorry your browser doesn't support MPEG4 video playback!
+                    </video>
+                </project_card>
+            </div>
+        </div>
+        <div class="flex_grid">
+            <div class="flex_row">
+                <project_card class="video_card">
+                    <h2 class="centered">Terrain Color 2</h2>
+                    <video class="rounded" width="640" controls autoplay>
+                        <source src="/assets/Grass_TerrainColor2.mp4" type="video/mp4">
+                        Sorry your browser doesn't support MPEG4 video playback!
+                    </video>
+                </project_card>
+            </div>
+        </div>
+    </body>
+</html>
