--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           My first name is "Liam"
           <br/>
           <br/>
-          I'm 18 years old
+          I am 18 years old
           <br/>
           I live on the West Coast of the USA
           <br/>
