Link to home page

--- a/galleries/grass_com.html
+++ b/galleries/grass_com.html
@@ -13,6 +13,9 @@
     </head>
     <body>
         <h1 class="centered">Strayed VR - Grass Commission</h1>
+        <h2 class="centered">
+            <a class="white" href="/">Home Page</a>
+        </h2>
         <br/>
         <h2 class="centered">Videos</h2>
         <h3 class="centered">Disclaimer: Videos are in alphabetical order! They're not ordered chronologically!</h3>
