--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="centered">
       zCubed (Liam)
     </h1>
-    <img src="/assets/zCubed_Purple_512.png" alt="zCubed Logo" class="centered" width="256"/>
+    <img src="/assets/zCubed_Purple_512.gif" alt="zCubed Logo" class="centered" width="256"/>
     <br/>
 
     <h1 class="centered">
