--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="/style/text.css">
     <link rel="stylesheet" href="/style/page.css">
+
+    <link rel="icon" href="/assets/zCubed_Purple_64.gif" type="image/gif" />
   </head>
 
   <body>
