--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
     <br/>
 
     <h1 class="centered">
-      About me
+      About Me
     </h1>
 
     <div class="flex_grid">
       <div class="flex_row">
         <project_card class="about_me centered">
-          <h2>Who am I?</h2>
           My username is "zCubed"
           <br/>
           My first name is "Liam"
@@ -46,22 +45,70 @@
       </div>
     </div>
 
+    <h1 class="centered">
+      Experience
+    </h1>
+
     <div class="flex_grid">
       <div class="flex_row">
         <project_card class="about_me centered">
-          <h2>Experience?</h2>
-          <h3><a class="white" href="https://www.patreon.com/strayed/about">Torched Games</a> - Commission - March 2023</h3>
+          <h3 class="no-top">
+            <a class="white" href="https://github.com/VirtualAfterthoughts">Virtual Afterthoughts</a> - Member - September 2021
+            <br/>
+            Unity Engine - C# / HLSL / ShaderLab
+          </h3>
+          Joined "Virtual Afterthoughts" as a Graphics Programmer
+          <br/>
+          Funded PlasticSCM and Steam page
+          <br/>
+          <br/>
+          Created / maintained a fork of the Unity Graphics stack for our games' artistic needs and requirements
+          <br/>
+          <br/>
+          Assisted in development of minor gameplay features and editor tools of Project "LVR"
+          <br/>
+          <h3 class="no-bottom">
+            <a class="white" href="./galleries/vat_lvr.html">Project "LVR" Gallery</a>
+          </h3>
+        </project_card>
+      </div>
+    </div>
+    <div class="flex_grid">
+      <div class="flex_row">
+        <project_card class="about_me centered">
+          <h3 class="no-top">
+            <a class="white" href="https://www.patreon.com/strayed/about">Torched Games</a> - Commission - March 2023
+            <br/>
+            Unity Engine - C# / HLSL / ShaderLab
+          </h3>
           Commissioned by <a class="white" href="https://www.patreon.com/strayed/about">Torched Games</a> to create a
           foliage system for their upcoming VR survival game "Strayed".
           <br/>
           <br/>
           System was never finished, but the requesting party was happy with the work done up until that point
           <br/>
-          <h3>
+          <h3 class="no-bottom">
             <a class="white" href="./galleries/grass_com.html">Gallery</a>
             -
             <a class="white" href="https://github.com/zCubed3/GPU-Grass/">Source Code</a>
           </h3>
+        </project_card>
+      </div>
+    </div>
+
+    <h1 class="centered">
+      Contact Info
+    </h1>
+
+    <div class="flex_grid">
+      <div class="flex_row">
+        <project_card class="social centered">
+          <h3 class="no-top">Discord</h3>
+          @zcubed
+        </project_card>
+        <project_card class="social centered">
+          <h3 class="no-top">Email</h3>
+          zcubedtres@gmail.com
         </project_card>
       </div>
     </div>
@@ -73,7 +120,7 @@
     <div class="flex_grid">
       <div class="flex_row">
         <project_card>
-          <h1 class="centered">
+          <h1 class="centered no-top">
             <a class="white" href="https://github.com/zCubed3/v502">
               v502
             </a>
@@ -90,7 +137,7 @@
           Is capable of compiling and simulating most basic 6502 instructions, but lacks a complete ISA implementation
         </project_card>
         <project_card>
-          <h1 class="centered">
+          <h1 class="centered no-top">
             <a class="white" href="https://github.com/zCubed3/rt-everywhere">
               rt-everywhere
             </a>
@@ -119,7 +166,7 @@
       </div>
       <div class="flex_row">
         <project_card>
-          <h1 class="centered">
+          <h1 class="centered no-top">
             <a class="white" href="https://github.com/VirtualAfterthoughts/VAT.kMotion">
               VAT.kMotion (Fork)
             </a>
@@ -133,7 +180,7 @@
           A fork of <a href="https://github.com/Kink3d/kMotion">Kink3d/kMotion</a>, better integrating it into <a href="https://github.com/VirtualAfterthoughts/VAT.CustomURP/">VAT.CustomURP</a>
         </project_card>
         <project_card>
-          <h1 class="centered">
+          <h1 class="centered no-top">
             <a class="white" href="https://github.com/VirtualAfterthoughts/VAT.UnityGraphics/tree/zcubed/2021.3/staging">
               VAT.CustomURP
             </a>
@@ -188,6 +235,39 @@
           <a href="https://github.com/zCubed3/project-archive/tree/main/C%2B%2B/manta">Manta</a> - My second OpenGL "Game Engine" - Incomplete
         </div>
       </project_card>
+    </div>
+
+    <h1 class="centered">
+      Hardware
+    </h1>
+
+    <div class="flex_grid">
+      <div class="flex_row">
+        <project_card class="social centered">
+          <h3 class="no-top">Desktop</h3>
+          Model: Custom Built
+          <br/>
+          CPU: Ryzen 7 3700X
+          <br/>
+          RAM: 32GB DDR4-3200
+          <br/>
+          GPU: Radeon RX 5700XT
+          <br/>
+          OS: Windows 11 / Arch Linux
+        </project_card>
+        <project_card class="social centered">
+          <h3 class="no-top">Laptop</h3>
+          Model: MacBook Air (2022)
+          <br/>
+          CPU: Apple M2 8C (4E/4P)
+          <br/>
+          RAM: 24GB
+          <br/>
+          GPU: Apple M2 10C
+          <br/>
+          OS: macOS Ventura
+        </project_card>
+      </div>
     </div>
   </body>
 </html>
