Generative page design!

--- a/galleries/grass_com.html
+++ b/galleries/grass_com.html
@@ -25,7 +25,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h2 class="centered">Biome Blending</h2>
-                    <video class="rounded" width="640" controls autoplay>
+                    <video class="rounded" width="640" autoplay loop controls>
                         <source src="/assets/Grass_BiomeBlending.mp4" type="video/mp4">
                         Sorry your browser doesn't support MPEG4 video playback!
                     </video>
@@ -36,7 +36,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h2 class="centered">Biome Gradient</h2>
-                    <video class="rounded" width="640" controls>
+                    <video class="rounded" width="640" autoplay loop controls>
                         <source src="/assets/Grass_BiomeGradient.mp4" type="video/mp4">
                         Sorry your browser doesn't support MPEG4 video playback!
                     </video>
@@ -47,7 +47,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h2 class="centered">Biomes</h2>
-                    <video class="rounded" width="640" controls>
+                    <video class="rounded" width="640" autoplay loop controls>
                         <source src="/assets/Grass_Biomes.mp4" type="video/mp4">
                         Sorry your browser doesn't support MPEG4 video playback!
                     </video>
@@ -58,7 +58,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h2 class="centered">Displacement</h2>
-                    <video class="rounded" width="640" controls>
+                    <video class="rounded" width="640" autoplay loop controls>
                         <source src="/assets/Grass_Displacement.mp4" type="video/mp4">
                         Sorry your browser doesn't support MPEG4 video playback!
                     </video>
@@ -69,7 +69,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h2 class="centered">GPU Placement</h2>
-                    <video class="rounded" width="640" controls>
+                    <video class="rounded" width="640" autoplay loop controls>
                         <source src="/assets/Grass_GPUPlacement.mp4" type="video/mp4">
                         Sorry your browser doesn't support MPEG4 video playback!
                     </video>
@@ -80,7 +80,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h2 class="centered">Terrain Color 1</h2>
-                    <video class="rounded" width="640" controls>
+                    <video class="rounded" width="640" autoplay loop controls>
                         <source src="/assets/Grass_TerrainColor1.mp4" type="video/mp4">
                         Sorry your browser doesn't support MPEG4 video playback!
                     </video>
@@ -91,7 +91,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h2 class="centered">Terrain Color 2</h2>
-                    <video class="rounded" width="640" controls>
+                    <video class="rounded" autoplay loop controls>
                         <source src="/assets/Grass_TerrainColor2.mp4" type="video/mp4">
                         Sorry your browser doesn't support MPEG4 video playback!
                     </video>
