--- a/galleries/vat_lvr.html
+++ b/galleries/vat_lvr.html
@@ -25,17 +25,17 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Pre Baked AO - Our Method</h3>
-                    <img class="rounded" src="/assets/lvr/pbao_tweak.jpg" alt="Crate with defined ambient occlusion" height="360"/>
+                    <img class="rounded" src="/assets/lvr/pbao_tweak.jpg" alt="Crate with defined ambient occlusion" height="280"/>
                 </project_card>
                 <project_card class="video_card">
                     <h3 class="centered">Pre Baked AO - Unity's Method</h3>
-                    <img class="rounded" src="/assets/lvr/pbao_vanilla.jpg" alt="Crate with very soft, undefined ambient occlusion" height="360"/>
+                    <img class="rounded" src="/assets/lvr/pbao_vanilla.jpg" alt="Crate with very soft, undefined ambient occlusion" height="280"/>
                 </project_card>
             </div>
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Blacklights</h3>
-                    <video class="rounded" controls height="360">
+                    <video class="rounded" autoplay loop controls height="280">
                         <source src="/assets/lvr/blacklight.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
@@ -43,13 +43,13 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Iridescence (Rifles)</h3>
-                    <video class="rounded" controls height="360">
+                    <video class="rounded" autoplay loop controls height="280">
                         <source src="/assets/lvr/thin_film_rifles.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
                 <project_card class="video_card">
                     <h3 class="centered">Iridescence (Pistols)</h3>
-                    <video class="rounded" controls height="360">
+                    <video class="rounded" autoplay loop controls height="280">
                         <source src="/assets/lvr/thin_film_pistols.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
@@ -57,7 +57,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Proximity Fade</h3>
-                    <video class="rounded" controls height="360">
+                    <video class="rounded" autoplay loop controls height="280">
                         <source src="/assets/lvr/prox_fade.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
@@ -65,8 +65,8 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Motion Blur</h3>
-                    <p class="centered">Note: This is a fork of <a class="white" href="https://github.com/Kink3d/kMotion">Kink3d/kMotion</a> I've made called <a class="white" href="https://github.com/VirtualAfterthoughts/VAT.kMotion">VAT.kMotion</a></p>
-                    <video class="rounded" controls height="360">
+                    <p class="centered">Note: This is a fork of <a class="white" href="https://github.com/Kink3d/kMotion">Kink3d/kMotion</a> I've made, <a class="white" href="https://github.com/VirtualAfterthoughts/VAT.kMotion">VAT.kMotion</a></p>
+                    <video class="rounded" autoplay loop controls height="280">
                         <source src="/assets/lvr/motion_blur.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
@@ -78,61 +78,61 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Atrium - Fog On</h3>
-                    <img class="rounded" src="/assets/lvr/atrium_fog_on.jpg" alt="Atrium With Fog On" height="360"/>
+                    <img class="rounded" src="/assets/lvr/atrium_fog_on.jpg" alt="Atrium With Fog On" height="280"/>
                 </project_card>
                 <project_card class="video_card">
                     <h3 class="centered">Atrium - Fog Off</h3>
-                    <img class="rounded" src="/assets/lvr/atrium_fog_off.jpg" alt="Atrium With Fog Off" height="360"/>
+                    <img class="rounded" src="/assets/lvr/atrium_fog_off.jpg" alt="Atrium With Fog Off" height="280"/>
                 </project_card>
             </div>
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Neon - Fog On</h3>
-                    <img class="rounded" src="/assets/lvr/neon_fog_on.jpg" alt="Neon With Fog On" height="360"/>
+                    <img class="rounded" src="/assets/lvr/neon_fog_on.jpg" alt="Neon With Fog On" height="280"/>
                 </project_card>
                 <project_card class="video_card">
                     <h3 class="centered">Neon - Fog Off</h3>
-                    <img class="rounded" src="/assets/lvr/neon_fog_off.jpg" alt="Neon With Fog Off" height="360"/>
+                    <img class="rounded" src="/assets/lvr/neon_fog_off.jpg" alt="Neon With Fog Off" height="280"/>
                 </project_card>
             </div>
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Range - Fog On</h3>
-                    <img class="rounded" src="/assets/lvr/range_fog_on.jpg" alt="Range With Fog On" height="360"/>
+                    <img class="rounded" src="/assets/lvr/range_fog_on.jpg" alt="Range With Fog On" height="280"/>
                 </project_card>
                 <project_card class="video_card">
                     <h3 class="centered">Range - Fog Off</h3>
-                    <img class="rounded" src="/assets/lvr/range_fog_off.jpg" alt="Range With Fog Off" height="360"/>
+                    <img class="rounded" src="/assets/lvr/range_fog_off.jpg" alt="Range With Fog Off" height="280"/>
                 </project_card>
             </div>
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Display - Fog On</h3>
-                    <img class="rounded" src="/assets/lvr/display_fog_on.jpg" alt="Display With Fog On" height="360"/>
+                    <img class="rounded" src="/assets/lvr/display_fog_on.jpg" alt="Display With Fog On" height="280"/>
                 </project_card>
                 <project_card class="video_card">
                     <h3 class="centered">Display - Fog Off</h3>
-                    <img class="rounded" src="/assets/lvr/display_fog_off.jpg" alt="Display With Fog Off" height="360"/>
+                    <img class="rounded" src="/assets/lvr/display_fog_off.jpg" alt="Display With Fog Off" height="280"/>
                 </project_card>
             </div>
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Monolith - Fog On</h3>
-                    <img class="rounded" src="/assets/lvr/monolith_fog_on.jpg" alt="Monolith With Fog On" height="360"/>
+                    <img class="rounded" src="/assets/lvr/monolith_fog_on.jpg" alt="Monolith With Fog On" height="280"/>
                 </project_card>
                 <project_card class="video_card">
                     <h3 class="centered">Monolith - Fog Off</h3>
-                    <img class="rounded" src="/assets/lvr/monolith_fog_off.jpg" alt="Monolith With Fog Off" height="360"/>
+                    <img class="rounded" src="/assets/lvr/monolith_fog_off.jpg" alt="Monolith With Fog Off" height="280"/>
                 </project_card>
             </div>
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Cubes - Fog On</h3>
-                    <img class="rounded" src="/assets/lvr/cubes_fog_on.jpg" alt="Cubes With Fog On" height="360"/>
+                    <img class="rounded" src="/assets/lvr/cubes_fog_on.jpg" alt="Cubes With Fog On" height="280"/>
                 </project_card>
                 <project_card class="video_card">
                     <h3 class="centered">Cubes - Fog Off</h3>
-                    <img class="rounded" src="/assets/lvr/cubes_fog_off.jpg" alt="Cubes With Fog Off" height="360"/>
+                    <img class="rounded" src="/assets/lvr/cubes_fog_off.jpg" alt="Cubes With Fog Off" height="280"/>
                 </project_card>
             </div>
         </div>
@@ -142,7 +142,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Code Rain</h3>
-                    <video class="rounded" controls height="360">
+                    <video class="rounded" autoplay loop controls height="280">
                         <source src="/assets/lvr/code_rain.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
