--- a/galleries/vat_lvr.html
+++ b/galleries/vat_lvr.html
@@ -35,7 +35,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Blacklights</h3>
-                    <video class="rounded" autoplay loop controls height="280">
+                    <video class="rounded" loop controls height="280">
                         <source src="/assets/lvr/blacklight.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
@@ -43,13 +43,13 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Iridescence (Rifles)</h3>
-                    <video class="rounded" autoplay loop controls height="280">
+                    <video class="rounded" loop controls height="280">
                         <source src="/assets/lvr/thin_film_rifles.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
                 <project_card class="video_card">
                     <h3 class="centered">Iridescence (Pistols)</h3>
-                    <video class="rounded" autoplay loop controls height="280">
+                    <video class="rounded" loop controls height="280">
                         <source src="/assets/lvr/thin_film_pistols.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
@@ -57,7 +57,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Proximity Fade</h3>
-                    <video class="rounded" autoplay loop controls height="280">
+                    <video class="rounded" loop controls height="280">
                         <source src="/assets/lvr/prox_fade.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
@@ -66,7 +66,7 @@
                 <project_card class="video_card">
                     <h3 class="centered">Motion Blur</h3>
                     <p class="centered">Note: This is a fork of <a class="white" href="https://github.com/Kink3d/kMotion">Kink3d/kMotion</a> I've made, <a class="white" href="https://github.com/VirtualAfterthoughts/VAT.kMotion">VAT.kMotion</a></p>
-                    <video class="rounded" autoplay loop controls height="280">
+                    <video class="rounded" loop controls height="280">
                         <source src="/assets/lvr/motion_blur.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
@@ -142,7 +142,7 @@
             <div class="flex_row">
                 <project_card class="video_card">
                     <h3 class="centered">Code Rain</h3>
-                    <video class="rounded" autoplay loop controls height="280">
+                    <video class="rounded" loop controls height="280">
                         <source src="/assets/lvr/code_rain.mp4" type="video/mp4"/>
                     </video>
                 </project_card>
